--- a/CMS/CMS.Web/Views/Account/Details.cshtml
+++ b/CMS/CMS.Web/Views/Account/Details.cshtml
@@ -1,23 +1,25 @@
 ﻿@model CMS.Application.DTOs.Register
 
-<h2>User Details</h2>
 
-<div>
-    <dl class="row">
+<div class="card">
+    <div class="card-body">
+        <h2>User Details</h2>
 
-        <dt class="col-sm-2">Email</dt>
-        <dd class="col-sm-10">@Model.Email</dd>
-        <dt class="col-sm-2">Username</dt>
-        <dd class="col-sm-10">@Model.UserName</dd>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">Email:</dt>
+            <dd class="col-sm-10">@Model.Email</dd>
 
-        <dt class="col-sm-2">Role</dt>
-        <dd class="col-sm-10">@Model.SelectedRole</dd>
-    </dl>
+            <dt class="col-sm-2">Username:</dt>
+            <dd class="col-sm-10">@Model.UserName</dd>
+
+            <dt class="col-sm-2">Role:</dt>
+            <dd class="col-sm-10">@Model.SelectedRole</dd>
+        </dl>
+    </div>
 </div>
 
-<div class="form-group " style="margin-top: 10px;">
+<div class="form-group mt-3">
     <a asp-action="Edit" asp-route-id="@Model.RegisterrId" class="btn btn-primary">Edit</a>
     <a class="btn btn-secondary" asp-action="Index">Back to List</a>
-
-
 </div>
