--- a/CMS/CMS.Web/Views/Candidates/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Delete.cshtml
@@ -1,7 +1,8 @@
 ﻿@model CMS.Application.DTOs.CandidateDTO
 
-<h2>Delete Candidate</h2>
-<h4>Are you sure you want to delete this candidate?</h4>
+@{
+    ViewData["Title"] = "Confirm Delete";
+}
 
 <style>
     /* Style for the modal container */
@@ -37,7 +38,7 @@
 
         /* Style for the OK button */
         .modal-buttons button.ok {
-            background-color: #4CAF50;
+            background-color: #d9534f; /* Bootstrap danger color */
             color: white;
             border: none;
             padding: 10px 20px;
@@ -53,88 +54,53 @@
         }
 </style>
 
-<div>
-    <h4>Candidate</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            Full Name:
-        </dt>
+<div class="card">
+    <div class="card-body">
+        <h5>Are you sure you want to delete this candidate?</h5>
 
-        <dd>
-            @Html.DisplayFor(model => model.FullName)
-        </dd>
-        <dt>
-            Phone Number:
-        </dt>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">Full Name:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.FullName)</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Phone)
-        </dd>
+            <dt class="col-sm-2">Phone Number:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.Phone)</dd>
 
-       @*  <dt>
-            @Html.DisplayNameFor(model => model.PositionId)
-        </dt>
+            <dt class="col-sm-2">CV Provider name:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.CompanyName)</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.PositionId)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.CountryName)
-        </dt>
+            <dt class="col-sm-2">Level:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.PositionName)</dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CountryName)
-        </dd> *@
+            <dt class="col-sm-2">Track:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.TrackName)</dd>
 
-        <dt>
-            CV Provider name:
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CompanyName)
-        </dd>
+            <dt class="col-sm-2">Experience:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.Experience)</dd>
 
-        <dt class="col-sm-2">Level:</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.PositionName)</dd>
-
-        <dt class="col-sm-2">Track:</dt>
-        <dd class="col-sm-10">@Html.DisplayFor(model => model.TrackName)</dd>
-        <dt>
-            Experience:
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Experience)
-        </dd>
-        @if (Model.CVAttachmentId != null)
+            @if (Model.CVAttachmentId != null)
             {
-        <dt class="col-sm-2">CV Attachment:</dt>
-        <dd class="col-sm-10">
+                <dt class="col-sm-2">CV Attachment:</dt>
+                <dd class="col-sm-10">
+                    <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.CVAttachmentId"><i style="font-size: x-large;" class="bx bxs-cloud-download"></i></a>
+                </dd>
+            }
+            else
+            {
+                <dt class="col-sm-2">CV Attachment:</dt>
+                <dd class="col-sm-10">There is no CV for this candidate</dd>
+            }
+        </dl>
 
-                <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.CVAttachmentId"><i style="font-size: x-large;" class="bx bxs-cloud-download"></i></a>
-           
-        </dd>
-        }
-        else
+        @using (Html.BeginForm())
         {
-            <dt class="col-sm-2">CV Attachment:</dt>
-            <dd class="col-sm-10">There is no CV for this candidate</dd>
+            <div class="form-actions no-color mt-3">
+                <button type="button" class="btn btn-danger" onclick="showConfirmationDialog()">Delete</button>
+                <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+            </div>
         }
-      
-    </dl>
-
-    @using (Html.BeginForm())
-    {
-        <div class="form-actions no-color " >
-            <button type="button" class="btn btn-danger" onclick="showConfirmationDialog()">Delete</button>
-            <a class="btn btn-secondary" asp-action="Index">Back to List</a>
-        </div>
-    }
+    </div>
 </div>
-
-
-
-
-
 
 <div class="overlay" id="overlay"></div>
 
