--- a/CMS/CMS.Web/Views/Candidates/Details.cshtml
+++ b/CMS/CMS.Web/Views/Candidates/Details.cshtml
@@ -1,60 +1,49 @@
 ﻿@model CMS.Application.DTOs.CandidateDTO
-<h2>Candidate Details</h2>
-
-<dl class="row">
-    <dt class="col-sm-2">Full Name:</dt>
-    <dd class="col-sm-10">@Html.DisplayFor(model => model.FullName)</dd>
-
-    
-    <dt class="col-sm-2">Phone:</dt>
-    <dd class="col-sm-10">@Html.DisplayFor(model => model.Phone)</dd>
-
-   @*  <dt class="col-sm-2">PositionId:</dt>
-    <dd class="col-sm-10">@Html.DisplayFor(model => model.Name)</dd>
- *@
-    <dt class="col-sm-2">CV Provider name:</dt>
-    <dd class="col-sm-10">@Html.DisplayFor(model => model.CompanyName)</dd>
-
-    <dt class="col-sm-2">Level:</dt>
-    <dd class="col-sm-10">@Html.DisplayFor(model => model.PositionName)</dd>
-
-    <dt class="col-sm-2">Track:</dt>
-    <dd class="col-sm-10">@Html.DisplayFor(model => model.TrackName)</dd>
-
-    <dt class="col-sm-2">Experience:</dt>
-    <dd class="col-sm-10">@Html.DisplayFor(model => model.Experience)</dd>
 
 
+<div class="card">
+    <div class="card-body">
+        <h2>Candidate Details</h2>
 
-    @if (Model.CVAttachmentId != null)
-    {
-        <dt class="col-sm-2">CV Attachment:</dt>
-        <dd class="col-sm-10">
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">Full Name:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.FullName)</dd>
 
-            <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.CVAttachmentId"><i style="font-size: x-large;" class="bx bxs-cloud-download"></i></a>
+            <dt class="col-sm-2">Phone:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.Phone)</dd>
 
-        </dd>
-    }
-    else
-    {
-        <dt class="col-sm-2">CV Attachment:</dt>
-        <dd class="col-sm-10">There is no CV for this candidate</dd>
-    }
-    
+            <dt class="col-sm-2">CV Provider name:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.CompanyName)</dd>
 
-    @* <dt class="col-sm-2">Country Name:</dt>
-    <dd class="col-sm-10">@Html.DisplayFor(model => model.CountryName)</dd> *@
+            <dt class="col-sm-2">Level:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.PositionName)</dd>
 
-    <!-- Add more details here as needed -->
-</dl>
+            <dt class="col-sm-2">Track:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.TrackName)</dd>
 
-@* <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
- *@
-<div class="form-group " style="margin-top: 10px;">
+            <dt class="col-sm-2">Experience:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.Experience)</dd>
+
+            @if (Model.CVAttachmentId != null)
+            {
+                <dt class="col-sm-2">CV Attachment:</dt>
+                <dd class="col-sm-10">
+                    <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.CVAttachmentId" class="btn btn-link">
+                        <i class="bx bxs-cloud-download" style="font-size: x-large;"></i> Download CV
+                    </a>
+                </dd>
+            }
+            else
+            {
+                <dt class="col-sm-2">CV Attachment:</dt>
+                <dd class="col-sm-10">There is no CV for this candidate</dd>
+            }
+        </dl>
+    </div>
+</div>
+
+<div class="form-group mt-3">
     <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
     <a class="btn btn-secondary" asp-action="Index">Back to List</a>
-
 </div>
