--- a/CMS/CMS.Web/Views/Company/AddCompany.cshtml
+++ b/CMS/CMS.Web/Views/Company/AddCompany.cshtml
@@ -1,9 +1,12 @@
 ﻿@model CMS.Application.DTOs.CompanyDTO
-<h1>Add a company</h1>
+
+@{
+    ViewData["Title"] = "Add a company";
+}
 <form asp-action="AddCompany">
 @*     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
  *@    <div class="form-group">
-        <label asp-for="Name" class="control-label"><span class="text-danger">*</span> Name</label>
+        <label asp-for="Name" class="control-label"><span class="text-danger">*</span> Company Name</label>
         <input style="width: 30%;" asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
         <span id="errorMessage" class="text-danger"></span>
@@ -25,7 +28,7 @@
         <span id="CountryError" class="text-danger"></span> 
     </div>
 
-    <h2 style="margin-top: 50px;font-size: 27px;">Contact Person</h2>
+    <h3 style="margin-top: 50px;font-size: 24px;">Contact Person</h3>
     <div class="form-group" style="margin-top: 15px;">
         <label asp-for="PersonName" class="control-label">Person Name</label>
         <input style="width: 30%;" asp-for="PersonName" class="form-control" />
