--- a/CMS/CMS.Web/Views/Company/Details.cshtml
+++ b/CMS/CMS.Web/Views/Company/Details.cshtml
@@ -1,90 +1,57 @@
 ﻿@model CMS.Application.DTOs.CompanyDTO
 
-@{
-    ViewData["Title"] = "Details";
-}
-
-<h1>Companies</h1>
-
-<div>
-  
-    <hr />
-    <dl class="row">
-
-        <dt class="col-sm-2">
-           Company Name:
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2">
-            Country Name:
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.CountryName)
-        </dd>
-        @if(Model.PersonName != null)
-        {
-            <dt class="col-sm-2">
-                Person Name:
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.PersonName)
-            </dd>
-        }
-        else
-        {
-            <dt class="col-sm-2" >
-                Person Name:
-            </dt>
-            <dd class="col-sm-10" >
-                There is no person name to cnotact.
-            </dd>
-        }
-
-        @if (Model.Email != null)
-        {
-            <dt class="col-sm-2">
-                Email:
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Email)
-            </dd>
-        }
-        else
-        {
-            <dt class="col-sm-2" >
-                Email:
-            </dt>
-            <dd class="col-sm-10" >
-                There is no Email to cnotact.
-            </dd>
-        }
-
-        @if (Model.PhoneNumber != null)
-        {
-        <dt class="col-sm-2">
-            Phone Number:
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.PhoneNumber)
-            </dd>
-        }
-        else
-        {
-            <dt class="col-sm-2" >
-                Phone Number:
-            </dt>
-            <dd class="col-sm-10" >
-                There is no Phone Number to cnotact.
-            </dd>
-        }
 
 
-    </dl>
+<div class="card">
+    <div class="card-body">
+        <h2>Company Details</h2>
+        <hr />
+        <dl class="row">
+
+            <dt class="col-sm-2">Company Name:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.Name)</dd>
+
+            <dt class="col-sm-2">Country Name:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.CountryName)</dd>
+
+            @if (Model.PersonName != null)
+            {
+                <dt class="col-sm-2">Person Name:</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.PersonName)</dd>
+            }
+            else
+            {
+                <dt class="col-sm-2">Person Name:</dt>
+                <dd class="col-sm-10">There is no person name to contact.</dd>
+            }
+
+            @if (Model.Email != null)
+            {
+                <dt class="col-sm-2">Email:</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.Email)</dd>
+            }
+            else
+            {
+                <dt class="col-sm-2">Email:</dt>
+                <dd class="col-sm-10">There is no Email to contact.</dd>
+            }
+
+            @if (Model.PhoneNumber != null)
+            {
+                <dt class="col-sm-2">Phone Number:</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.PhoneNumber)</dd>
+            }
+            else
+            {
+                <dt class="col-sm-2">Phone Number:</dt>
+                <dd class="col-sm-10">There is no Phone Number to contact.</dd>
+            }
+
+        </dl>
+    </div>
 </div>
-<div class="form-group ">
+
+<div class="form-group mt-3">
     <a asp-action="UpdateCompany" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
     <a class="btn btn-secondary" asp-action="GetCompanies">Back to List</a>
-
 </div>
