--- a/CMS/CMS.Web/Views/Company/UpdateCompany.cshtml
+++ b/CMS/CMS.Web/Views/Company/UpdateCompany.cshtml
@@ -1,20 +1,22 @@
 ﻿@model CMS.Application.DTOs.CompanyDTO
+@{
+    ViewData["Title"] = "Edit Company";
+}
 
-<h1>Edit Company</h1>
 
 <form asp-action="UpdateCompany">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="form-group"><input type="hidden" asp-for="Id" /></div>
 
     <div class="form-group">
-        <label asp-for="Name" class="control-label"></label>
+        <label asp-for="Name" class="control-label"><span class="text-danger">*</span>  Company Name</label>
         <input style="width: 30%;" asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
         <span id="NameError" class="text-danger"></span>
     </div>
 
     <div class="form-group" style="margin-top: 15px;">
-        <label asp-for="CountryId" class="control-label">Country</label>
+        <label asp-for="CountryId" class="control-label"><span class="text-danger">*</span>  Country</label>
         @if (ViewBag.CountriesDTOs != null)
         {
             <select style="width: 30%;" asp-for="CountryId" class="form-control">
