--- a/CMS/CMS.Web/Views/Country/ShowCompanies.cshtml
+++ b/CMS/CMS.Web/Views/Country/ShowCompanies.cshtml
@@ -1,46 +1,43 @@
 ﻿@model CMS.Application.DTOs.CountryDTO
 
 @{
-    ViewData["Title"] = "Companies in This Country";
+    ViewData["Title"] = "Country Details";
 }
 
-<div>
-    <dl>
-        <dt class="col-sm-2">
-            Country Name:
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Name
-        </dd>
-    </dl>
-    <dl>
-        <dt>Companies Name:</dt>
-        <dd>
-            @if (Model.companyDTOs.Any())
-            {
-                @foreach (var com in Model.companyDTOs)
-                {
-                    @com.Name
+<div class="card">
+    <div class="card-body">
+        <h2>Companies in This Country</h2>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">Country Name:</dt>
+            <dd class="col-sm-10">@Model.Name</dd>
+        </dl>
 
-                    @if (com != Model.companyDTOs.Last())
+        <dl class="row">
+            <dt class="col-sm-2">Companies Name:</dt>
+            <dd class="col-sm-10">
+                @if (Model.companyDTOs.Any())
+                {
+                    @foreach (var com in Model.companyDTOs)
                     {
-                        @(",  ")
+                        @com.Name
+
+                        @if (com != Model.companyDTOs.Last())
+                        {
+                            @(",  ")
+                        }
                     }
                 }
-            }
-            else
-            {
-                <p>There is no companies connected to this country</p>
-            }
-        </dd>
-    </dl>
- 
-
+                else
+                {
+                    <p>There is no companies connected to this country</p>
+                }
+            </dd>
+        </dl>
+    </div>
 </div>
 
-
-<div class="form-group ">
+<div class="form-group mt-3">
     <a asp-action="UpdateCountry" asp-route-id="@Model.Id" class="btn btn-primary">Edit</a>
     <a asp-action="GetCountries" class="btn btn-secondary">Back to List</a>
-
 </div>
