--- a/CMS/CMS.Web/Views/Interviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Delete.cshtml
@@ -53,56 +53,62 @@
             cursor: pointer;
         }
 </style>
-<h4>Are you sure you want to delete this?</h4>
-<div>
-    <hr />
-    <dl class="row">
+<div class="card">
+    <div class="card-body">
+        <h5>Are you sure you want to delete this interview?</h5>
 
-        <dt class="col-sm-2">
+        <hr />
+        <div class="row">
+            <div class="col-sm-6">
+        <dl>
+        <dt >
             Candidate Name:
         </dt>
-        <dd class="col-sm-10">
+        <dd >
             @Model.FullName
         </dd>
-        <dt class="col-sm-2" style="margin-top: 15px;">
+        <dt  style="margin-top: 15px;">
             Level:
         </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
+        <dd  style="margin-top: 15px;">
             @Model.Name
         </dd>
-        <dt class="col-sm-2" style="margin-top: 15px;">
+        <dt  style="margin-top: 15px;">
             Track:
         </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
+        <dd  style="margin-top: 15px;">
             @Model.TrackName
         </dd>
-        <dt class="col-sm-2" style="margin-top: 15px;">
+        <dt  style="margin-top: 15px;">
             First Interviewer Name:
         </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
+        <dd  style="margin-top: 15px;">
             @Model.InterviewerName
         </dd>
 
-        <dt class="col-sm-2" style="margin-top: 15px;">
+        <dt  style="margin-top: 15px;">
             Second Interviewer Name:
         </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
+        <dd  style="margin-top: 15px;">
             @Model.SecondInterviewerName
         </dd>
-        <dt class="col-sm-2" style="margin-top: 15px;">
+        <dt  style="margin-top: 15px;">
             Date:
         </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
+        <dd  style="margin-top: 15px;">
             @Model.Date
         </dd>
-        <dt class="col-sm-2" hidden>
+        <dt  hidden>
             Parent ID
         </dt>
-
-        <dt class="col-sm-2" style="margin-top: 15px;">
+        </dl>
+    </div>
+    <div class="col-sm-6">
+        <dl>
+        <dt  style="margin-top: 15px;">
             First Interview Score:
         </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
+        <dd  style="margin-top: 15px;">
             @if (@Model.FirstInterviewScore != null)
             {
                 @Model.FirstInterviewScore
@@ -115,44 +121,44 @@
 
         @if (@Model.ActualExperience != null)
         {
-            <dt class="col-sm-2" style="margin-top: 15px;">
+            <dt  style="margin-top: 15px;">
                 Actual Experience:
             </dt>
-            <dd class="col-sm-10" style="margin-top: 15px;">
+            <dd  style="margin-top: 15px;">
                 @Model.ActualExperience
             </dd>
         }
         else
         {
-            <dt class="col-sm-2" style="margin-top: 15px;">
+            <dt  style="margin-top: 15px;">
                 Actual Experience:
             </dt>
-            <dd class="col-sm-10" style="margin-top: 15px;">
+            <dd  style="margin-top: 15px;">
                 There is no Actual Experience added here
             </dd>
         }
 
-        <dt class="col-sm-2" style="margin-top: 15px;">
+        <dt  style="margin-top: 15px;">
             Status:
         </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
+        <dd  style="margin-top: 15px;">
             @Model.StatusName
         </dd>
         @if (@Model.Notes !=null)
         {
-            <dt class="col-sm-2" style="margin-top: 15px;">
+            <dt  style="margin-top: 15px;">
                 Notes:
             </dt>
-            <dd class="col-sm-10" style="margin-top: 15px;">
+            <dd  style="margin-top: 15px;">
                 @Model.Notes
             </dd>
         }
         else
         {
-            <dt class="col-sm-2" style="margin-top: 15px;">
+            <dt  style="margin-top: 15px;">
                 Notes:
             </dt>
-            <dd class="col-sm-10" style="margin-top: 15px;">
+            <dd  style="margin-top: 15px;">
                 There is no note added here
             </dd>
         }
@@ -160,29 +166,32 @@
 
         @if (Model.AttachmentId != null)
         {
-            <dt class="col-sm-2" style="margin-top: 15px;">
+            <dt  style="margin-top: 15px;">
                 Evaluation:
             </dt>
-            <dd class="col-sm-10" style="margin-top: 15px;">
+            <dd  style="margin-top: 15px;">
                 <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.AttachmentId">Download evaluation</a>
             </dd>
         }
         else
         {
-            <dt class="col-sm-2" style="margin-top: 15px;">
+            <dt  style="margin-top: 15px;">
                 Evaluation:
             </dt>
-            <dd class="col-sm-10" style="margin-top: 15px;">
+            <dd  style="margin-top: 15px;">
                 There is no Evaluation for this interview
             </dd>
         }
 
     </dl>
+            </div>
+        </div>
     <form asp-action="Delete" class="">
         <input type="submit" value="Delete" onclick="showConfirmationDialog(event)" class="btn btn-danger" />
         <a class="btn btn-secondary" asp-action="Index">Back to List</a>
 
     </form>
+    </div>
 </div>
 
 
