--- a/CMS/CMS.Web/Views/Interviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Details.cshtml
@@ -1,167 +1,173 @@
 ﻿@using CMS.Domain.Enums
 @model CMS.Application.DTOs.InterviewsDTO
 
-<h2>Interviews Detail</h2>
 
-<div>
-    <hr />
-    <dl class="row">
+<div class="card">
+    <div class="card-body">
+        <h2>Interview Details</h2>
 
-        <dt class="col-sm-2">
-            Candidate Name:
-        </dt>
-        <dd class="col-sm-10">
-            @Model.FullName
-        </dd>
-        <dt class="col-sm-2" style="margin-top: 15px;">
-            Level:
-        </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
-            @Model.Name
-        </dd>
-        <dt class="col-sm-2" style="margin-top: 15px;">
-            Track:
-        </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
-            @Model.TrackName
-        </dd>
-        <dt class="col-sm-2" style="margin-top: 15px;">
-            First Interviewer Name:
-        </dt>
-       
-        <dd class="col-sm-10" style="margin-top: 15px;">
-            @Model.InterviewerName
-        </dd>
-
-        <dt class="col-sm-2" style="margin-top: 15px;">
-            Second Interviewer Name:
-        </dt>
-        @if (@Model.SecondInterviewerId == null)
-        {
-            <dd class="col-sm-10" style="margin-top: 15px;">
-                There is no second interviewer
+        <hr />
+        <dl class="row">
+            <div class="col-sm-6">
+                <dt>
+                    Candidate Name:
+                </dt>
+                <dd>
+                    @Model.FullName
                 </dd>
-        }
-        else
-        {
-        
-        <dd class="col-sm-10" style="margin-top: 15px;">
-            @Model.SecondInterviewerName
-        </dd>
-        }
-        <dt class="col-sm-2" style="margin-top: 15px;">
-           Interview Date:
-        </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
-            @Model.Date.ToString("dd/MM/yyyy hh:mm tt")
-        </dd>
-        <dt class="col-sm-2" hidden>
-            Parent ID
-        </dt>
+                <dt style="margin-top: 15px;">
+                    Level:
+                </dt>
+                <dd style="margin-top: 15px;">
+                    @Model.Name
+                </dd>
+                <dt style="margin-top: 15px;">
+                    Track:
+                </dt>
+                <dd style="margin-top: 15px;">
+                    @Model.TrackName
+                </dd>
+                <dt style="margin-top: 15px;">
+                    First Interviewer Name:
+                </dt>
+                <dd style="margin-top: 15px;">
+                    @Model.InterviewerName
+                </dd>
 
-        <dt class="col-sm-2" style="margin-top: 15px;">
-            First Interview Score:
-        </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
-            @if (@Model.FirstInterviewScore != null)
-            {
-                @Model.FirstInterviewScore
-            }
-            else
-            {
-                <text>No score available from the first interview.</text>
-            }
-        </dd>
-        @if (User.IsInRole("HR Manager"))
-        {
-            <dt class="col-sm-2" style="margin-top: 15px;">
-                Actual Experience:
-            </dt>
-
-            <dd style="margin-top: 15px;" class="col-sm-10">
-                Please check the View History to see the Actual Experience.
-            </dd>
-        }
-
-        @if (!User.IsInRole("HR Manager") || User.IsInRole("Admin"))
-        {
-        <dt class="col-sm-2" style="margin-top: 15px;">
-            Actual Experience:
-        </dt>
-       
-            <dd style="margin-top: 15px;" class="col-sm-10">
-                @if (Model.StatusName == StatusCode.GetName("PND"))
+                <dt style="margin-top: 15px;">
+                    Second Interviewer Name:
+                </dt>
+                @if (@Model.SecondInterviewerId == null)
                 {
-                    <span class="text-danger">Please Add Result</span>
+                    <dd style="margin-top: 15px;">
+                        There is no second interviewer
+                    </dd>
                 }
                 else
                 {
-                    @Model.ActualExperience
+
+                    <dd style="margin-top: 15px;">
+                        @Model.SecondInterviewerName
+                    </dd>
                 }
-            </dd>
-        }
-
-        <dt class="col-sm-2" style="margin-top: 15px;">
-            Status:
-        </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
-            @Model.StatusName
-        </dd>
-        @if (@Model.Notes !=null)
-        {
-        <dt class="col-sm-2" style="margin-top: 15px;">
-            Notes:
-        </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
-            @Model.Notes
-        </dd>
-        }
-        else
-        {
-        <dt class="col-sm-2" style="margin-top: 15px;">
-            Notes:
-        </dt>
-        <dd class="col-sm-10" style="margin-top: 15px;">
-            There is no Note added here
-        </dd>
-        }
-        @if (User.IsInRole("Interviewer") || User.IsInRole("HR Manager") || User.IsInRole("Admin"))
-        {
-
-            @if (Model.AttachmentId != null)
-            {
-                <dt class="col-sm-2" style="margin-top: 15px;">
-                    Evaluation:
+                <dt style="margin-top: 15px;">
+                    Interview Date:
                 </dt>
-                <dd class="col-sm-10" style="margin-top: 15px;">
-                    <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.AttachmentId">Download evaluation</a>
+                <dd style="margin-top: 15px;">
+                    @Model.Date.ToString("dd/MM/yyyy hh:mm tt")
                 </dd>
-            }
-            else
-            {
-                <dt class="col-sm-2" style="margin-top: 15px;">
-                    Evaluation:
+            </div>
+            <div class="col-sm-6">
+                <dt hidden>
+                    Parent ID
                 </dt>
-                <dd class="col-sm-10" style="margin-top: 15px;">
-                    There is no Evaluation for this interview
+                <dt style="margin-top: 15px;">
+                    First Interview Score:
+                </dt>
+                <dd style="margin-top: 15px;">
+                    @if (@Model.FirstInterviewScore != null)
+                    {
+                        @Model.FirstInterviewScore
+                    }
+                    else
+                    {
+                        <span class="text-muted">No score available from the first interview.</span>
+                    }
                 </dd>
-            }
+                @if (User.IsInRole("HR Manager") || User.IsInRole("Admin"))
+                {
+                    @if (@Model.ActualExperience != null)
+                    {
+                        <dt style="margin-top: 15px;">
+                            Actual Experience:
+                        </dt>
+                        <dd style="margin-top: 15px;">
+                            @Model.ActualExperience
+                        </dd>
+                    }
+                    else
+                    {
+                        <dt style="margin-top: 15px;">
+                            Actual Experience:
+                        </dt>
+                        <dd style="margin-top: 15px;">
+                            <span class="text-muted">No Actual Experience added</span>
+                        </dd>
+                    }
 
-        }
-      
+                }
 
-    </dl>
+               
+
+                <dt style="margin-top: 15px;">
+                    Status:
+                </dt>
+                <dd style="margin-top: 15px;">
+                    @Model.StatusName
+                </dd>
+                @if (@Model.Notes != null)
+                {
+                    <dt style="margin-top: 15px;">
+                        Notes:
+                    </dt>
+                    <dd style="margin-top: 15px;">
+                        @Model.Notes
+                    </dd>
+                }
+                else
+                {
+                    <dt style="margin-top: 15px;">
+                        Notes:
+                    </dt>
+                    <dd style="margin-top: 15px;">
+                        <span class="text-muted">There is no Note added here</span>
+                    </dd>
+                }
+                @if (@Model.StopCycleNote != null)
+                {
+                    <dt style="margin-top: 15px;">
+                        Stop Cycle Note:
+                    </dt>
+                    <dd style="margin-top: 15px;">
+                        @Model.StopCycleNote
+                    </dd>
+                }
+                else
+                {
+                    <dt style="margin-top: 15px;">
+                        Stop Cycle Note:
+                    </dt>
+                    <dd style="margin-top: 15px;">
+                        <span class="text-muted">There is no Stop Cycle Note added here</span>
+                    </dd>
+                }
+                @if (User.IsInRole("Interviewer") || User.IsInRole("HR Manager") || User.IsInRole("Admin"))
+                {
+
+                    @if (Model.AttachmentId != null)
+                    {
+                        <dt style="margin-top: 15px;">
+                            Evaluation:
+                        </dt>
+                        <dd style="margin-top: 15px; margin-left:-14px;">
+                            <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.AttachmentId" class="btn btn-link">Download evaluation</a>
+                        </dd>
+                    }
+                    else
+                    {
+                        <dt style="margin-top: 15px;">
+                            Evaluation:
+                        </dt>
+                        <dd style="margin-top: 15px;">
+                            <span class="text-muted">There is no Evaluation for this interview</span>
+                        </dd>
+                    }
+                }
+            </div>
+        </dl>
+    </div>
 </div>
-<div class="form-group ">
-    @{
-        string returnAction = "Index";
-        if (ViewBag.PreviousAction== "MyInterviews")
-        {
-            returnAction = "MyInterviews";
-        }
-    }
-@*    <a asp-action="Edit" asp-route-id="@Model.InterviewsId" class="btn btn-primary">Edit</a>
- *@    <a class="btn btn-secondary" asp-action="@returnAction">Back to List</a>
 
-    
+<div class="mt-3">
+    <a class="btn btn-secondary" asp-action="@ViewBag.PreviousAction">Back to List</a>
 </div>
