--- a/CMS/CMS.Web/Views/Interviews/Index.cshtml
+++ b/CMS/CMS.Web/Views/Interviews/Index.cshtml
@@ -14,6 +14,13 @@
         max-width: 100%;
         overflow-y: hidden;
     }
+
+    a.disabled {
+        color: #6c757d; /* Adjust color to make it visually disabled */
+        pointer-events: none; /* Disable mouse interactions */
+        opacity: 0.5; /* Adjust opacity to visually indicate disabled state */
+        cursor: not-allowed; /* Change cursor to indicate not-allowed */
+    }
 </style>
 
 
@@ -150,6 +157,7 @@
                                     }
                                     <td>
                                         <a class="bx bx-detail" style="font-size:x-large" asp-action="Details" asp-route-id="@item.InterviewsId" asp-route-previousAction="Index" data-bs-toggle="tooltip" data-bs-placement="left" data-bs-original-title="Details"></a>
+
                                         @if ((item.InterviewerRole == "Interviewer" || item.InterviewerRole == "General Manager" || item.InterviewerRole == "Solution Architecture") && item.StatusName == StatusCode.GetName("PND")  && item.ParentId ==null)
                                         {
                                             <input type="hidden" name="StatusId" value="@item.StatusId" />
@@ -157,6 +165,14 @@
                                             <a class="ri-delete-bin-2-line text-danger" style="font-size:x-large" asp-action="Delete" asp-route-id="@item.InterviewsId" data-bs-toggle="tooltip" data-bs-placement="right" data-bs-original-title="Delete"></a>
                                         }
 
+                                        @if (item.StatusName != StatusCode.GetName("PND"))
+                                        {
+                                            <a class="ri-shut-down-line disabled" style="font-size: x-large" asp-action="StopCycle" asp-route-id="@item.InterviewsId" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Stop Cycle"></a>
+                                        }
+                                        else
+                                        {
+                                            <a class="ri-shut-down-line" style="font-size: x-large" asp-action="StopCycle" asp-route-id="@item.InterviewsId" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-original-title="Stop Cycle"></a>
+                                        }
                                        
                                     </td>
 
@@ -187,3 +203,4 @@
         });
     });
 </script>
+    
