--- a/CMS/CMS.Web/Views/Position/AddPosition.cshtml
+++ b/CMS/CMS.Web/Views/Position/AddPosition.cshtml
@@ -1,9 +1,14 @@
 ﻿@model CMS.Application.DTOs.PositionDTO
-<h1>Add a position</h1>
+
+@{
+    ViewData["Title"] = "Add a position";
+}
+
+<h1></h1>
 <form asp-action="AddPosition" enctype="multipart/form-data">
     @* <div asp-validation-summary="ModelOnly" class="text-danger"></div> *@
         <div class="form-group">
-        <label asp-for="Name" class="control-label"><span class="text-danger">*</span> Name</label>
+        <label asp-for="Name" class="control-label"><span class="text-danger">*</span> Position Name</label>
         <input style="width: 30%;" asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
         <span id="errorMessage" class="text-danger"></span>
@@ -63,7 +68,7 @@
 
             // Validate Name
             if (!name.trim()) {
-                $('#errorMessage').text('Name is required.');
+                $('#errorMessage').text('Position Name is required.');
                 e.preventDefault(); // Prevent form submission
             } else {
                 $('#errorMessage').text('');
