--- a/CMS/CMS.Web/Views/Position/UpdatePosition.cshtml
+++ b/CMS/CMS.Web/Views/Position/UpdatePosition.cshtml
@@ -1,12 +1,14 @@
 ﻿@model CMS.Application.DTOs.PositionDTO
 
-<h1>Edit Position</h1>
+@{
+    ViewData["Title"] = "Edit Position";
+}
 
 <form asp-action="UpdatePosition">
-    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+    @* <div asp-validation-summary="ModelOnly" class="text-danger"></div> *@
     <div class="form-group"><input type="hidden" asp-for="Id" /></div>
     <div class="form-group">
-        <label asp-for="Name" class="control-label"></label>
+        <label asp-for="Name" class="control-label"><span class="text-danger">*</span> Position Name</label>
         <input style="width: 30%;" asp-for="Name" class="form-control" />
         <span asp-validation-for="Name" class="text-danger"></span>
     </div>
@@ -64,42 +66,3 @@
 </script>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 
-@* <script>
-    $(document).ready(function () {
-        $('form').submit(function (e) {
-            var name = $('#Name').val();
-            var fileInput = $('#file');
-
-            // Validate Name
-            if (!name.trim()) {
-                $('#errorMessage').text('Name is required.');
-                e.preventDefault(); // Prevent form submission
-            } else {
-                $('#errorMessage').text('');
-            }
-
-            // Validate File
-            var allowedExtensions = /\.(docx|xlsx|png|jpg)$/i; // Allow DOCX, XLSX, PNG, and JPG
-            if (fileInput.val() && !allowedExtensions.exec(fileInput.val())) {
-                $('#fileError').text('Only DOCX, XLSX, PNG, and JPG files are allowed.');
-                e.preventDefault(); // Prevent form submission
-            } else {
-                $('#fileError').text('');
-            }
-        });
-
-        // Additional function to validate file format on change
-        function validateFileFormat(input) {
-            var fileInput = $(input);
-            var allowedExtensions = /\.(docx|xlsx|png|jpg)$/i; // Allow DOCX, XLSX, PNG, and JPG
-
-            if (!allowedExtensions.exec(fileInput.val())) {
-                $('#fileError').text('Only DOCX, XLSX, PNG, and JPG files are allowed.');
-                fileInput.val(''); // Clear the file input
-            } else {
-                $('#fileError').text('');
-            }
-        }
-    });
-</script>
- *@
