--- a/CMS/CMS.Web/Views/SearchInterviews/Delete.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Delete.cshtml
@@ -4,78 +4,114 @@
     ViewData["Title"] = "Delete Interview";
 }
 
+<style>
+    /* Style for the modal container */
+    .confirmation-modal {
+        display: none;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background-color: #fff;
+        padding: 20px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+        z-index: 1000;
+    }
 
-<h4>Are you sure you want to delete this?</h4>
-<div>
-    <hr />
-    <dl class="row">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.FullName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.FullName)
-        </dd>
-        <dt class="col-sm-2">
-            Level
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class="col-sm-2">
-            Track:
-        </dt>
-        <dd class="col-sm-10">
-            @Model.TrackName
-        </dd>
-        <dt class="col-sm-2">
-            Interviewer
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.InterviewerName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Date)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Date)
-        </dd>
-        <dt class="col-sm-2" hidden>
-            @Html.DisplayNameFor(model => model.ParentId)
-        </dt>
-        <dd class="col-sm-10" hidden>
-            @Html.DisplayFor(model => model.ParentId)
-        </dd>
+    /* Style for the overlay background */
+    .overlay {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 999;
+    }
 
-       @*  <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Score)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Score)
-        </dd> *@
-        <dt class="col-sm-2">
-            Status
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.StatusName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Notes)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Notes)
-        </dd>
+    /* Style for the buttons */
+    .modal-buttons {
+        text-align: right;
+        margin-top: 10px;
+    }
 
-      @*   <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.AttachmentId)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.AttachmentId)
-        </dd> *@
-    </dl>
-    
-    <form asp-action="Delete" class="">
-        <input type="submit" value="Delete" class="btn btn-danger" />
-        <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+        /* Style for the OK button */
+        .modal-buttons button.ok {
+            background-color: #d9534f; /* Bootstrap danger color */
+            color: white;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
 
-    </form>
+        /* Style for the Cancel button */
+        .modal-buttons button.cancel {
+            background-color: #ccc;
+            border: none;
+            padding: 10px 20px;
+            cursor: pointer;
+        }
+</style>
+
+
+<div class="card">
+    <div class="card-body">
+        <h5>Are you sure you want to delete this interview?</h5>
+        <hr />
+        <dl class="row">
+            <dt class="col-sm-2">Full Name:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.FullName)</dd>
+            <dt class="col-sm-2">Level:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.Name)</dd>
+            <dt class="col-sm-2">Track:</dt>
+            <dd class="col-sm-10">@Model.TrackName</dd>
+            <dt class="col-sm-2">Interviewer:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.InterviewerName)</dd>
+            <dt class="col-sm-2">Date:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.Date)</dd>
+            <dt class="col-sm-2" hidden>@Html.DisplayNameFor(model => model.ParentId)</dt>
+            <dd class="col-sm-10" hidden>@Html.DisplayFor(model => model.ParentId)</dd>
+            <dt class="col-sm-2">Status:</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.StatusName)</dd>
+            <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Notes)</dt>
+            <dd class="col-sm-10">@Html.DisplayFor(model => model.Notes)</dd>
+        </dl>
+
+        <form asp-action="Delete" class="form-group">
+            <button type="button" class="btn btn-danger" onclick="showConfirmationDialog()">Delete</button>
+            <a class="btn btn-secondary" asp-action="Index">Back to List</a>
+        </form>
+    </div>
 </div>
+
+<div class="overlay" id="overlay"></div>
+
+<div class="confirmation-modal" id="confirmation-modal">
+    <p>Are you sure you want to delete this interview? Please note that if you proceed, all child entities associated with this interview will also be deleted.</p>
+    <div class="modal-buttons">
+        <button class="ok" onclick="confirmDelete()">OK</button>
+        <button class="cancel" onclick="cancelDelete()">Cancel</button>
+    </div>
+</div>
+
+<script>
+    function showConfirmationDialog() {
+        document.getElementById('confirmation-modal').style.display = 'block';
+        document.getElementById('overlay').style.display = 'block';
+    }
+
+    function confirmDelete() {
+        document.querySelector('form').submit();
+        hideConfirmationDialog();
+    }
+
+    function cancelDelete() {
+        hideConfirmationDialog();
+    }
+
+    function hideConfirmationDialog() {
+        document.getElementById('confirmation-modal').style.display = 'none';
+        document.getElementById('overlay').style.display = 'none';
+    }
+</script>
