--- a/CMS/CMS.Web/Views/SearchInterviews/Details.cshtml
+++ b/CMS/CMS.Web/Views/SearchInterviews/Details.cshtml
@@ -1,92 +1,60 @@
 ﻿@model CMS.Application.DTOs.InterviewsDTO
 
-<h2>Interview Details</h2>
+<div class="card">
+    <div class="card-body">
+        <h2>Interview Details</h2>
+        <hr />
+        <dl class="row">
 
-<div>
-    <hr />
-    <dl class="row">
+            <dt class="col-sm-2">Candidate Name:</dt>
+            <dd class="col-sm-10">@Model.FullName</dd>
 
-        <dt class="col-sm-2">
-            Candidate Name:
-        </dt>
-        <dd class="col-sm-10">
-            @Model.FullName
-        </dd>
-        <dt class="col-sm-2">
-            Level:
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Name
-        </dd>
-        <dt class="col-sm-2">
-            Track:
-        </dt>
-        <dd class="col-sm-10">
-            @Model.TrackName
-        </dd>
-        <dt class="col-sm-2">
-            Interviewer Name:
-        </dt>
-        <dd class="col-sm-10">
-            @Model.InterviewerName
-        </dd>
-        <dt class="col-sm-2">
-            Date:
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Date
-        </dd>
-        <dt class="col-sm-2" hidden>
-            Parent ID
-        </dt>
-        <dd class="col-sm-10" hidden>
-            @Model.ParentId
-        </dd>
+            <dt class="col-sm-2">Level:</dt>
+            <dd class="col-sm-10">@Model.Name</dd>
 
-        @* <dt class="col-sm-2">
-            Score:
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Score
-        </dd> *@
-        <dt class="col-sm-2">
-            Status:
-        </dt>
-        <dd class="col-sm-10">
-            @Model.StatusName
-        </dd>
-        <dt class="col-sm-2">
-            Notes:
-        </dt>
-        <dd class="col-sm-10">
-            @Model.Notes
-        </dd>
+            <dt class="col-sm-2">Track:</dt>
+            <dd class="col-sm-10">@Model.TrackName</dd>
 
-       @*  @if (Model.AttachmentId != null)
-        {
-            <dt class="col-sm-2">
-                Evaluation:
-            </dt>
+            <dt class="col-sm-2">Interviewer Name:</dt>
+            <dd class="col-sm-10">@Model.InterviewerName</dd>
+
+            <dt class="col-sm-2">Date:</dt>
+            <dd class="col-sm-10">@Model.Date</dd>
+
+            <dt class="col-sm-2" hidden>Parent ID</dt>
+            <dd class="col-sm-10" hidden>@Model.ParentId</dd>
+
+            @* <dt class="col-sm-2">Score:</dt>
+            <dd class="col-sm-10">@Model.Score</dd> *@
+
+            <dt class="col-sm-2">Status:</dt>
+            <dd class="col-sm-10">@Model.StatusName</dd>
+
+            <dt class="col-sm-2">Notes:</dt>
+            <dd class="col-sm-10">@Model.Notes</dd>
+
+            <dt class="col-sm-2">Stop Cycle Note:</dt>
+            <dd class="col-sm-10">@Model.StopCycleNote</dd>
+
+
+            @*  @if (Model.AttachmentId != null)
+            {
+            <dt class="col-sm-2">Evaluation:</dt>
             <dd class="col-sm-10">
-                <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.AttachmentId">Download evaluation</a>
+            <a asp-controller="Attachments" asp-action="Download" asp-route-id="@Model.AttachmentId">Download evaluation</a>
             </dd>
-        }
-        else
-        {
-            <dt class="col-sm-2">
-                Evaluation:
-            </dt>
-            <dd class="col-sm-10">
-                There is no Evaluation for this interview
-            </dd>
-        } *@
+            }
+            else
+            {
+            <dt class="col-sm-2">Evaluation:</dt>
+            <dd class="col-sm-10">There is no Evaluation for this interview</dd>
+            } *@
 
-
-
-    </dl>
+        </dl>
+    </div>
 </div>
-<div class="form-group ">
+
+<div class="form-group mt-3">
     @* <a asp-action="Edit" asp-route-id="@Model.InterviewsId" class="btn btn-primary">Edit</a> *@
     <a class="btn btn-secondary" href="@Url.Action("Index", new { positionFilter = ViewBag.PositionFilter, scoreFilter = ViewBag.ScoreFilter, statusFilter = ViewBag.StatusFilter, candidateFilter = ViewBag.CandidateFilter, interviewerFilter = ViewBag.InterviewerFilter, fromDate = ViewBag.FromDate, toDate = ViewBag.ToDate, trackFilterDropdown = ViewBag.TrackList })">Back to List</a>
-
 </div>
