--- a/CMS/CMS.Web/Views/Shared/_Layout.cshtml
+++ b/CMS/CMS.Web/Views/Shared/_Layout.cshtml
@@ -377,6 +377,10 @@
                                     {
                                         <img class="rounded-circle header-profile-user" src="~/theme/images/users/avatar-3.jpg" alt="Header Avatar">
                                     }
+                                    else
+                                    {
+                                        <img class="rounded-circle header-profile-user" src="~/theme/images/users/Anonymous.jpg" alt="Header Avatar">
+                                    }
                                     <span class="text-start ms-xl-2">
                                         <span class="d-none d-xl-inline-block ms-1 fw-medium user-name-text">@User.Identity.Name</span>
                                         <span class="d-none d-xl-block ms-1 fs-12 user-name-sub-text"></span>
@@ -390,7 +394,8 @@
                                 @* <a class="dropdown-item" href="apps-chat.html"><i class="mdi mdi-message-text-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Messages</span></a> *@
                                 <div class="dropdown-divider"></div>
                                 @* <a class="dropdown-item" href="pages-profile-settings.html"><i class="mdi mdi-cog-outline text-muted fs-16 align-middle me-1"></i> <span class="align-middle">Settings</span></a> *@
-                                @if(!User.IsInRole("Admin")){
+                                @if (!User.IsInRole("Admin") && (User.IsInRole("Interviewer") || User.IsInRole("General Manager") || User.IsInRole("Solution Architecture") || User.IsInRole("HR Manager")))
+                                {
                                     <a class="dropdown-item" asp-controller="Account" asp-action="ChangePassword">
                                         <i class="mdi mdi-lock-reset text-muted fs-16 align-middle me-1"></i>
                                         <span class="align-middle" data-key="t-change-password">Change Password</span>
